fix dark mode

--- a/src/styles/themes/dark/dark-mode-style.css
+++ b/src/styles/themes/dark/dark-mode-style.css
@@ -1,3 +1,11 @@
+h1,
+h2,
+h3,
+h4,
+h5 {
+  color: #ffffff;
+}
+
 .react-json-view,
 .ant-table,
 .ant-menu,
